# tpl2020_midterm

./: CMakeLists.txt  README.md  globals.h  lexer.c  lexer.h  parser.c  parser.h  runner.c  semantic.c  semantic.h  tokens.h
examples/: bad_lexer.tpl  bad_parse.tpl  bad_semantic.tpl  goodexample1.tpl  goodexample2.tpl  goodexample3.tpl
